--- a/Predict_Healthy_And_Faulty_Audio_MFCC_SVM.ipynb
+++ b/Predict_Healthy_And_Faulty_Audio_MFCC_SVM.ipynb
@@ -5,7 +5,7 @@
    "id": "ae66cb1a",
    "metadata": {},
    "source": [
-    "This notebook contains the Healthy and Faulty audios prediction. We've worked with Librosa methods to extract the MFCC Features. Then we predicted the audios with SVM."
+    "This notebook contains the Healthy and Faulty audios prediction. We've worked with Librosa methods to extract the MFCC Features. Then we've predicted the audios with SVM."
    ]
   },
   {
