--- a/Predict_Healthy_And_Faulty_Audio_MFCC_SVM.ipynb
+++ b/Predict_Healthy_And_Faulty_Audio_MFCC_SVM.ipynb
@@ -120,7 +120,7 @@
    "id": "99e4fa1f",
    "metadata": {},
    "source": [
-    "## Show the Distribution of Healthy and Faulty Sounds"
+    "## Showing the Distribution of Healthy and Faulty Sounds"
    ]
   },
   {
